--- a/RawToolsGUI/App.config
+++ b/RawToolsGUI/App.config
@@ -23,7 +23,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Security.AccessControl" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ThermoFisher.CommonCore.Data" publicKeyToken="1aef06afb5abd953" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.71" newVersion="5.0.0.71" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
