--- a/RawToolsViz/packages.config
+++ b/RawToolsViz/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="OpenMcdf" version="2.2.1.9" targetFramework="net462" />
   <package id="OpenMcdf.Extensions" version="2.2.1.4" targetFramework="net462" />
-  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net462" />
-  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net462" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net462" />
+  <package id="OxyPlot.WindowsForms" version="2.1.0" targetFramework="net462" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
-  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.7" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.Data" version="5.0.0.7" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.MassPrecisionEstimator" version="5.0.0.7" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.RawFileReader" version="5.0.0.7" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.71" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.Data" version="5.0.0.71" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.MassPrecisionEstimator" version="5.0.0.71" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.RawFileReader" version="5.0.0.71" targetFramework="net462" />
 </packages>
